2007-01-16  Per Bothner  <per@bothner.com>

	* XDataType.java (stringType): Use java.lang.CharSequence.
	(stringStringType): New type.
	(compare): Consider stringType and stringStringType as equivalent.
	(isInstance): Check for CharSequence.

	* TreeScanner.java (getDesc): New helper method.
	(apply): Map ClassCastException to more friendly WrongType.

2007-01-14  Per Bothner  <per@bothner.com>

	* XStringType.java: New class, extends XDataType.
	* XString.java: New class, implements CharSequence.
	* Makefile.am: Update accordingly.
	* XDataType.java (NORMALIZED_STRING_TYPE_CODE, TOKEN_TYPE_CODE,
	LANGUAGE_TYPE_CODE, NMTOKEN_TYPE_CODE, NAME_TYPE_CODE, NCNAME_TYPE_CODE,
	ID_TYPE_CODE, IDREF_TYPE_CODE, ENTITY_TYPE_CODE): New constants.

	* XIntegerType.java (isUnsignedType, isUnsignedType): New field, method.
	(<init>): Set isUnsignedType if name starts with "unsigned".
	(valueOf): Don't allow initial sign if isUnsignedType.
	Strip off initial '+'.

2007-01-04  Per Bothner  <per@bothner.com>

	* KNode.java (baseURI): Change return type to Path.

2007-01-02  Per Bothner  <per@bothner.com>

	* WriteTo.java: Update to use Path rather than URI_utils.

2006-12-29  Per Bothner  <per@bothner.com>

	* XDataType.java (anyURIType): Implement using gnu.text.Path.
	(toURI): Remove method - now use URIPath.makeURI instead.
	(isInstance, cast, valueOf): Update accordingly.

	* HttpPrinter.java (begindata): Fix non-CharSequence PreProcess-case.
	(append(String)): Removed, for same reason.
	* Nodes.java (append): Removed, for same reason.

2006-12-18  Per Bothner  <per@bothner.com>

	* WriteTo.java (writeTo, writeToIfChanged): Change filename to
	generalized URI, as handled by URI_utils.

2006-12-14  Per Bothner  <per@bothner.com>

	* XMLParser.jav: Removed class.  Now handled by new gnu.xml,XMLParser.
	* Makefile.am: Update accordingly.
	* Document.java: Update for new XMLParser API.

2006-12-06  Per Bothner  <per@bothner.com>

	* NodeType.java (GROUP_OK): Renamed to ELEMENT_OK.